ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/AccessibilityAfterStatic/parserAccessibilityAfterStatic7/input.ts.stderr
error[1029]: 'public' modifier must precede 'static' modifier
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/AccessibilityAfterStatic/parserAccessibilityAfterStatic7/input.ts:3:8
  |
3 | static public intI() {}
  |        ^^^^^^

